diagweave/tests/ui/set-algebra/unknown_set.stderr
error: referenced undefined set `MissingError`
 --> tests/ui/set-algebra/unknown_set.rs:4:16
  |
4 |     ApiError = MissingError | {
  |                ^^^^^^^^^^^^
