diagweave/tests/ui/set-algebra/unknown_set.rs
use diagweave::set;

set! {
    ApiError = MissingError | {
        RateLimited,
    }
}

fn main() {}